--- a/examples/Select an Algorithm.ipynb
+++ b/examples/Select an Algorithm.ipynb
@@ -34,7 +34,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from fracdiff import fracdiff\n",
+    "from numpy_fracdiff import fracdiff\n",
     "import numpy as np\n",
     "\n",
     "from statsmodels.tsa.stattools import adfuller\n",
@@ -169,8 +169,8 @@
       "d: 0.5333 | p-val: 8.89E-03\n",
       "d: 0.5000 | p-val: 2.91E-02\n",
       "best d=0.5333333333333333\n",
-      "CPU times: user 876 ms, sys: 115 ms, total: 991 ms\n",
-      "Wall time: 656 ms\n"
+      "CPU times: user 759 ms, sys: 91.1 ms, total: 851 ms\n",
+      "Wall time: 470 ms\n"
      ]
     }
    ],
@@ -254,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 915 ms, sys: 97.3 ms, total: 1.01 s\n",
-      "Wall time: 526 ms\n"
+      "CPU times: user 729 ms, sys: 76.4 ms, total: 806 ms\n",
+      "Wall time: 416 ms\n"
      ]
     },
     {
@@ -295,8 +295,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 555 ms, sys: 60 ms, total: 615 ms\n",
-      "Wall time: 336 ms\n"
+      "CPU times: user 477 ms, sys: 52.2 ms, total: 529 ms\n",
+      "Wall time: 279 ms\n"
      ]
     },
     {
@@ -329,8 +329,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 652 ms, sys: 69.3 ms, total: 722 ms\n",
-      "Wall time: 474 ms\n"
+      "CPU times: user 572 ms, sys: 61 ms, total: 633 ms\n",
+      "Wall time: 344 ms\n"
      ]
     },
     {
@@ -363,8 +363,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 622 ms, sys: 63.9 ms, total: 686 ms\n",
-      "Wall time: 863 ms\n"
+      "CPU times: user 573 ms, sys: 61.7 ms, total: 634 ms\n",
+      "Wall time: 337 ms\n"
      ]
     },
     {
@@ -428,8 +428,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.85 s, sys: 232 ms, total: 2.08 s\n",
-      "Wall time: 1.17 s\n"
+      "CPU times: user 1.84 s, sys: 190 ms, total: 2.03 s\n",
+      "Wall time: 1.12 s\n"
      ]
     },
     {
@@ -462,67 +462,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimization terminated successfully.\n",
-      "         Current function value: 0.000000\n",
-      "         Iterations: 32\n",
-      "         Function evaluations: 64\n",
-      "CPU times: user 3.73 s, sys: 391 ms, total: 4.12 s\n",
-      "Wall time: 2.16 s\n"
+      "doesn't with numba.jit decorator around frac_weights\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.53034045])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
     "d = scipy.optimize.fmin(loss_fn, 0.1, args=(alpha, x, n_trunc), xtol=(alpha*.01)**2)\n",
-    "d"
+    "d\n",
+    "\"\"\"\n",
+    "print(\"doesn't with numba.jit decorator around frac_weights\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.19 s, sys: 335 ms, total: 3.52 s\n",
-      "Wall time: 1.89 s\n"
+      "doesn't with numba.jit decorator around frac_weights\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0.53034045])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
     "d = scipy.optimize.fsolve(loss_fn, 0.1, args=(alpha, x, n_trunc), xtol=(alpha*.01)**2)\n",
-    "d"
+    "d\n",
+    "\"\"\"\n",
+    "print(\"doesn't with numba.jit decorator around frac_weights\")"
    ]
   },
   {
@@ -550,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.3"
   },
   "toc": {
    "base_numbering": 1,
