fminbound and hypothesis test

--- a/examples/Select an Algorithm.ipynb
+++ b/examples/Select an Algorithm.ipynb
@@ -153,24 +153,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d: 0.9667 | p-val: 0.00E+00\n",
-      "d: 0.9333 | p-val: 0.00E+00\n",
-      "d: 0.9000 | p-val: 0.00E+00\n",
-      "d: 0.8667 | p-val: 6.37E-29\n",
-      "d: 0.8333 | p-val: 1.05E-21\n",
-      "d: 0.8000 | p-val: 5.57E-20\n",
-      "d: 0.7667 | p-val: 4.12E-18\n",
-      "d: 0.7333 | p-val: 3.86E-16\n",
-      "d: 0.7000 | p-val: 6.56E-11\n",
-      "d: 0.6667 | p-val: 2.72E-09\n",
-      "d: 0.6333 | p-val: 8.89E-08\n",
-      "d: 0.6000 | p-val: 2.10E-06\n",
-      "d: 0.5667 | p-val: 2.05E-03\n",
-      "d: 0.5333 | p-val: 8.89E-03\n",
-      "d: 0.5000 | p-val: 2.91E-02\n",
-      "best d=0.5333333333333333\n",
-      "CPU times: user 759 ms, sys: 91.1 ms, total: 851 ms\n",
-      "Wall time: 470 ms\n"
+      "d: 0.9667 | DF:-28.0859 | crit:-3.4400 | p-val: 0.00E+00\n",
+      "d: 0.9333 | DF:-26.9952 | crit:-3.4400 | p-val: 0.00E+00\n",
+      "d: 0.9000 | DF:-25.8410 | crit:-3.4400 | p-val: 0.00E+00\n",
+      "d: 0.8667 | DF:-16.0098 | crit:-3.4400 | p-val: 6.37E-29\n",
+      "d: 0.8333 | DF:-11.7790 | crit:-3.4400 | p-val: 1.05E-21\n",
+      "d: 0.8000 | DF:-11.0341 | crit:-3.4400 | p-val: 5.57E-20\n",
+      "d: 0.7667 | DF:-10.2660 | crit:-3.4400 | p-val: 4.12E-18\n",
+      "d: 0.7333 | DF:-9.4815 | crit:-3.4400 | p-val: 3.86E-16\n",
+      "d: 0.7000 | DF:-7.4257 | crit:-3.4400 | p-val: 6.56E-11\n",
+      "d: 0.6667 | DF:-6.7656 | crit:-3.4400 | p-val: 2.72E-09\n",
+      "d: 0.6333 | DF:-6.1202 | crit:-3.4400 | p-val: 8.89E-08\n",
+      "d: 0.6000 | DF:-5.4981 | crit:-3.4400 | p-val: 2.10E-06\n",
+      "d: 0.5667 | DF:-3.8975 | crit:-3.4401 | p-val: 2.05E-03\n",
+      "d: 0.5333 | DF:-3.4665 | crit:-3.4401 | p-val: 8.89E-03\n",
+      "d: 0.5000 | DF:-3.0669 | crit:-3.4401 | p-val: 2.91E-02\n",
+      "d: 0.4667 | DF:-2.6991 | crit:-3.4401 | p-val: 7.42E-02\n",
+      "d: 0.4333 | DF:-2.9368 | crit:-3.4400 | p-val: 4.12E-02\n",
+      "d: 0.4000 | DF:-2.5472 | crit:-3.4400 | p-val: 1.04E-01\n",
+      "d: 0.3667 | DF:-2.4559 | crit:-3.4400 | p-val: 1.27E-01\n",
+      "d: 0.3333 | DF:-2.0886 | crit:-3.4400 | p-val: 2.49E-01\n",
+      "d: 0.3000 | DF:-1.7592 | crit:-3.4400 | p-val: 4.01E-01\n",
+      "d: 0.2667 | DF:-1.4623 | crit:-3.4400 | p-val: 5.52E-01\n",
+      "d: 0.2333 | DF:-1.1927 | crit:-3.4400 | p-val: 6.77E-01\n",
+      "d: 0.2000 | DF:-0.9455 | crit:-3.4400 | p-val: 7.73E-01\n",
+      "d: 0.1667 | DF:-0.8562 | crit:-3.4400 | p-val: 8.02E-01\n",
+      "d: 0.1333 | DF:-0.6088 | crit:-3.4400 | p-val: 8.69E-01\n",
+      "d: 0.1000 | DF:-0.3749 | crit:-3.4400 | p-val: 9.14E-01\n",
+      "d: 0.0667 | DF:-0.1501 | crit:-3.4400 | p-val: 9.44E-01\n",
+      "d: 0.0333 | DF: 0.0697 | crit:-3.4400 | p-val: 9.64E-01\n",
+      "d: 0.0000 | DF: 0.2875 | crit:-3.4400 | p-val: 9.77E-01\n",
+      "best d=0.6\n",
+      "CPU times: user 1.84 s, sys: 180 ms, total: 2.02 s\n",
+      "Wall time: 1.16 s\n"
      ]
     }
    ],
@@ -181,17 +196,21 @@
     "n_steps = 30\n",
     "order = 1\n",
     "n_trunc = 100\n",
-    "alpha = 0.01\n",
+    "alpha = 0.001\n",
     "bestorder = order\n",
     "\n",
     "for order in np.flip(np.arange(n_steps) / n_steps):\n",
     "    z = fracdiff(x, order=order, truncation=n_trunc)\n",
-    "    _, pval, _, _, _, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
-    "    print(\"d: {:5.4f} | p-val: {:1.2E}\".format(order, pval))\n",
-    "    if pval > alpha:\n",
-    "        break\n",
-    "    else:\n",
+    "    stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "    print(\"d: {:5.4f} | DF:{: 7.4f} | crit:{: 7.4f} | p-val: {:1.2E}\".format(\n",
+    "        order, stat, crit['1%'], pval))\n",
+    "    \n",
+    "    if (stat < crit['1%']) and (pval < alpha):\n",
     "        bestorder = order\n",
+    "    else:\n",
+    "        #break\n",
+    "        pass\n",
+    "        \n",
     "\n",
     "print(f\"best d={bestorder}\")"
    ]
@@ -213,8 +232,8 @@
    "source": [
     "def loss_fn(d: float, alpha: float, x: np.array, n_trunc: int) -> float:\n",
     "    z = fracdiff(x, order=d, truncation=n_trunc)\n",
-    "    _, pval, _, _, _, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
-    "    return pval - alpha  # for Bisection"
+    "    stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "    return stat - (crit['1%'] * 1.0001) #+ (alpha - pval)"
    ]
   },
   {
@@ -225,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "(0.966761902563547, -0.01)"
+       "(3.7278096266363696, -25.67897829869691)"
       ]
      },
      "execution_count": 9,
@@ -254,14 +273,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 729 ms, sys: 76.4 ms, total: 806 ms\n",
-      "Wall time: 416 ms\n"
+      "CPU times: user 721 ms, sys: 69.9 ms, total: 791 ms\n",
+      "Wall time: 403 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.53033447265625"
+       "0.5311907958984375"
       ]
      },
      "execution_count": 10,
@@ -270,12 +289,11 @@
     }
    ],
    "source": [
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.bisect(loss_fn, 0, 1, args=(alpha, x, n_trunc), xtol=alpha*.01)\n",
+    "%time d = scipy.optimize.bisect(loss_fn, 0.01, 1.5, args=(alpha, x, n_trunc), xtol=1e-04)\n",
     "d"
    ]
   },
@@ -295,14 +313,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 477 ms, sys: 52.2 ms, total: 529 ms\n",
-      "Wall time: 279 ms\n"
+      "CPU times: user 746 ms, sys: 73.2 ms, total: 820 ms\n",
+      "Wall time: 416 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5302962674827497"
+       "0.5312875459658993"
       ]
      },
      "execution_count": 11,
@@ -311,12 +329,11 @@
     }
    ],
    "source": [
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.ridder(loss_fn, 0, 1, args=(alpha, x, n_trunc), xtol=alpha*.01)\n",
+    "%time d = scipy.optimize.ridder(loss_fn, 0.01, 1.5, args=(alpha, x, n_trunc), xtol=1e-04)\n",
     "d"
    ]
   },
@@ -329,14 +346,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 572 ms, sys: 61 ms, total: 633 ms\n",
-      "Wall time: 344 ms\n"
+      "CPU times: user 469 ms, sys: 49.5 ms, total: 519 ms\n",
+      "Wall time: 299 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5303438239411459"
+       "0.5312358466278839"
       ]
      },
      "execution_count": 12,
@@ -345,12 +362,11 @@
     }
    ],
    "source": [
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.brenth(loss_fn, 0, 1, args=(alpha, x, n_trunc), xtol=alpha*.01)\n",
+    "%time d = scipy.optimize.brenth(loss_fn, 0.01, 1.5, args=(alpha, x, n_trunc), xtol=1e-04)\n",
     "d"
    ]
   },
@@ -363,14 +379,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 573 ms, sys: 61.7 ms, total: 634 ms\n",
-      "Wall time: 337 ms\n"
+      "CPU times: user 425 ms, sys: 46.1 ms, total: 471 ms\n",
+      "Wall time: 247 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5303403710498779"
+       "0.5312233892293179"
       ]
      },
      "execution_count": 13,
@@ -379,13 +395,32 @@
     }
    ],
    "source": [
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.brentq(loss_fn, 0, 1, args=(alpha, x, n_trunc), xtol=alpha*.01)\n",
+    "%time d = scipy.optimize.brentq(loss_fn, 0.01, 1.5, args=(alpha, x, n_trunc), xtol=1e-04)\n",
     "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d: 0.5312 | DF:-3.4402 | crit:-3.4401 | p-val: 9.66E-03\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = fracdiff(x, order=d, truncation=n_trunc)\n",
+    "stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "print(\"d: {:5.4f} | DF:{: 7.4f} | crit:{: 7.4f} | p-val: {:1.2E}\".format(\n",
+    "        d, stat, crit['1%'], pval))"
    ]
   },
   {
@@ -396,20 +431,20 @@
     "We will use the squared difference betweent the ADF test p-value and required threshold $\\alpha$ as target function for a minimization problem.\n",
     "\n",
     "$$\n",
-    "\\min_d \\; ({\\rm pvalue}(d) - \\alpha)^2\n",
+    "\\min_d \\; ({\\rm DF(d) - crit})^2\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def loss_fn(d: float, alpha: float, x: np.array, n_trunc: int) -> float:\n",
+    "def loss_fn(d: float, x: np.array, n_trunc: int) -> float:\n",
     "    z = fracdiff(x, order=d, truncation=n_trunc)\n",
-    "    _, pval, _, _, _, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
-    "    return (pval - alpha)**2"
+    "    stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "    return (stat - crit['1%'])**2"
    ]
   },
   {
@@ -421,40 +456,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.84 s, sys: 190 ms, total: 2.03 s\n",
-      "Wall time: 1.12 s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.5303404343390861"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "x = X[:, 0]  # pick the 1st time series\n",
-    "n_trunc = 100\n",
-    "alpha = 0.01\n",
-    "\n",
-    "d = scipy.optimize.newton(loss_fn, .1, args=(alpha, x, n_trunc), tol=(alpha*.01)**2)\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -462,56 +463,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doesn't with numba.jit decorator around frac_weights\n"
+      "CPU times: user 1.44 s, sys: 149 ms, total: 1.59 s\n",
+      "Wall time: 874 ms\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5312097960053145"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.fmin(loss_fn, 0.1, args=(alpha, x, n_trunc), xtol=(alpha*.01)**2)\n",
-    "d\n",
-    "\"\"\"\n",
-    "print(\"doesn't with numba.jit decorator around frac_weights\")"
+    "%time d = scipy.optimize.newton(loss_fn, 0.5, args=(x, n_trunc), tol=(alpha*.01)**2, maxiter=500)\n",
+    "d"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def loss_fn2(d: float, x: np.array, n_trunc: int) -> float:\n",
+    "    z = fracdiff(x, order=d, truncation=n_trunc)\n",
+    "    stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "    return (stat - crit['1%'])**2 + pval**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doesn't with numba.jit decorator around frac_weights\n"
+      "CPU times: user 514 ms, sys: 57 ms, total: 571 ms\n",
+      "Wall time: 345 ms\n",
+      "0.5312082297394483\n",
+      "CPU times: user 515 ms, sys: 58.2 ms, total: 574 ms\n",
+      "Wall time: 323 ms\n",
+      "0.5312319300973788\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "%%time\n",
     "x = X[:, 0]  # pick the 1st time series\n",
     "n_trunc = 100\n",
     "alpha = 0.01\n",
     "\n",
-    "d = scipy.optimize.fsolve(loss_fn, 0.1, args=(alpha, x, n_trunc), xtol=(alpha*.01)**2)\n",
-    "d\n",
-    "\"\"\"\n",
-    "print(\"doesn't with numba.jit decorator around frac_weights\")"
+    "%time d = scipy.optimize.fminbound(loss_fn, 0.01, 1.5, args=(x, n_trunc), xtol=1e-04, maxfun=200)\n",
+    "print(d)\n",
+    "\n",
+    "%time d = scipy.optimize.fminbound(loss_fn2, 0.01, 1.5, args=(x, n_trunc), xtol=1e-04, maxfun=200)\n",
+    "print(d)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d: 0.5312 | DF:-3.4403 | crit:-3.4401 | p-val: 9.66E-03\n"
+     ]
+    }
+   ],
    "source": [
-    "# Conclusion\n",
-    "The Ridder method seems to be fast way to find a fractal differentiation order."
+    "z = fracdiff(x, order=d, truncation=n_trunc)\n",
+    "stat, pval, _, _, crit, _ = adfuller(z[n_trunc:], regression='c', autolag='BIC')\n",
+    "print(\"d: {:5.4f} | DF:{: 7.4f} | crit:{: 7.4f} | p-val: {:1.2E}\".format(\n",
+    "        d, stat, crit['1%'], pval))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
