--- a/examples/fracadf1 example.ipynb
+++ b/examples/fracadf1 example.ipynb
@@ -30,7 +30,7 @@
     "%matplotlib inline\n",
     "\n",
     "import numpy as np\n",
-    "from numpy_fracadf import fracadf\n",
+    "from numpy_fracadf import fracadf1\n",
     "from numpy_fracdiff import fracdiff"
    ]
   },
@@ -69,8 +69,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.01 s, sys: 207 ms, total: 3.22 s\n",
-      "Wall time: 2.27 s\n",
+      "CPU times: user 2.95 s, sys: 187 ms, total: 3.13 s\n",
+      "Wall time: 2.14 s\n",
       "[0.42853641 0.38430947 0.23202419 0.16157006]\n"
      ]
     }
@@ -78,7 +78,7 @@
    "source": [
     "n_trunc = 200\n",
     "\n",
-    "%time d = fracadf(X, n_trunc=n_trunc)\n",
+    "%time d = fracadf1(X, n_trunc=n_trunc)\n",
     "\n",
     "print(d)"
    ]
